clinic-ops-enterprise/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clinic-ops
  labels:
    name: clinic-ops
    environment: production
    app.kubernetes.io/name: clinic-ops
    app.kubernetes.io/version: "2.0.0"
